<resources>
    <string name="app_name">MetroNav</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="about_text">This application is designed to help you get from your current location to your destination with ease. All you need to do is to provide the application with your pick-up location and your destination and the application will provide you with the best route.</string>
    <string name="from_text">From</string>
    <string name="to_text">To</string>
    <string name="drop_off_text">Drop-Off Station</string>
    <string name="pick_up_text">Pick-Up Station</string>
    <string name="find_route_text">Find Route</string>
    <string name="switch_content">switch stations</string>
    <string name="about_title">About</string>
    <string name="help_title">Help</string>
    <string name="app_title">MetroNav</string>
    <string name="login_label">Login</string>
    <string name="password_label">Password</string>
    <string name="email_label">Email</string>
    <string name="registration_label">Registration</string>
    <string name="fname_label">First Name</string>
    <string name="lname_label">Last Name</string>
    <string name="fname_hint">First Name</string>
    <string name="confirm_password_label">Confirm Password</string>
    <string name="register_button">Register</string>
    <string name="lname_hint">Last Name</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="confirm_password_hint">Confirm Password</string>
    <string name="login_button">Login</string>
    <string name="forgot_password_text">forgot password?</string>
    <string name="sign_up_text">Don\'t have an account? <font fgcolor='#000000'><b><u>Sign Up</u></b></font></string>
    <string name="history_label">History</string>
</resources>